@@ -3,13 +3,12 @@ Hash: SHA256
 
 DIST data_objects-0.9.9.gem 15360 RMD160 8250b2e0d6bb5bd0ce2eca61576b0fc2c44d880f SHA1 70431f0f2a5b642b386c9bb36d37194edf63a55a SHA256 947e296fd2ddacbb4bd56f0dc93d3925bed31709fbd70355e3116fa8550294a4
 EBUILD data_objects-0.9.9-r1.ebuild 643 RMD160 fc3804e4351d3b01ced0675a117e316958dc42ea SHA1 49244ab3c7712f0e3bd815d98a43487b8e2be801 SHA256 31c35eb2360f349b7574388040b409fc7df9e75fca66e9f95da5504bab527523
-EBUILD data_objects-0.9.9.ebuild 463 RMD160 710efa8cb410b56c7b23a587e5e95c40612f4cf7 SHA1 a186484b4dc3f92e8caab67421fceff41cb136b3 SHA256 2d85c8ec32245db64a691799e5b81644f53c13c81924d062958909305f8b11a2
-MISC ChangeLog 462 RMD160 b87d1269cee8ddc085931057dc7b5d506411e321 SHA1 88e6e5bc8fbf97e18fc87ed15fab25ffe4184f9e SHA256 c5047e055bbf0ede7139e6e92520cbe90efe4cff134522c132a588ed5e5ac8ae
+MISC ChangeLog 565 RMD160 989475d0df9327f50db891ddb59e22ea415c461f SHA1 13f034925d5af24675bc1b2121a9021eddb552d4 SHA256 8dbfe83834ca86d924b76949ce7c732d23971e74c8ad6d76d1f9afa3f8ffa5b8
 MISC metadata.xml 159 RMD160 eb364108353c7843cf1c01fba92129aaa46a0334 SHA1 0734f4c292968932afc57d0aa3a681c0b75b7bfc SHA256 abab7965b1f41e0acf6b54c554945c1c9fa35b5afab848d784dc58c298bc4679
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.15 (GNU/Linux)
 
-iF4EAREIAAYFAkxXCXMACgkQZihJkut28SvTgAD+KhfARgJUJtWhPs+1j4u9Y4Cq
-+Y31F96e8nOeS1C8rcgA/Av+FspqgrNs9+OW/8rdBCRX7o3yPnuj7KjM53CPoU4l
-=kN8m
+iF4EAREIAAYFAkxazS0ACgkQZihJkut28SvQbQEAhQkpJeylucHH5A1Js+Dt43jT
+axtOsJ9RbnRPocb2vW8A/jBRoGvi9rgx+kKrxRjjEb8uEkGru3XJUgaKgmsc0GXv
+=BOOA
 -----END PGP SIGNATURE-----
