@@ -1,18 +1,0 @@
-# Copyright 1999-2008 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/flexmock/flexmock-0.8.0.ebuild,v 1.1 2008/05/17 12:58:04 graaff Exp $
-
-inherit gems
-USE_RUBY="ruby18"
-
-DESCRIPTION="The Core DataObjects class"
-HOMEPAGE="http://rubyforge.org/projects/dorb"
-
-LICENSE="MIT"
-SLOT="0"
-KEYWORDS="~x86 ~amd64"
-IUSE=""
-
-RDEPEND="
-	>=dev-ruby/extlib-0.9.8
-	>=dev-ruby/addressable-2.0.0"
